# libi2c-python

./: .gitignore  CHANGELOG.md  README.md  canary.txt  pdm.toml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.copier/: answers_pypackage.yaml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: build-and-upload.yaml  coveralls.yaml  release-please.yaml  validate-code.yaml
doc/: design.md
docs/: CONTRIBUTING.md
examples/: dummy.py
feeph/i2c/: __init__.py  burst_handler.py  bus.py  conversions.py  emulation.py  utility.py
scripts/: run_tests  update_dependencies
src/feeph/i2c/: __init__.py  interface.py
tests/: test_burst_handler.py  test_conversions.py  test_emulated_i2cbus.py  test_emulation.py  test_hardware_i2cbus.py  test_simulated_i2cbus.py
