# line lengths:
#   - Excessive line lengths aren't good. But rather then automatically
#     breaking them and turning into vertical blocks we want to see the
#     nastiness sticking out prominently.
#
# black:
#   - If the question is "Black?" the answer is "No!"
#   - We use autopep8 to confirm compliance with PEP8, going beyond that
#     is not necessary. If you want to apply black, then fine, go ahead.
#     But we're not going to enforce or encourage it.

# documentation:
# https://pdm-project.org/latest/usage/config/

[project]
# PEP 621 project metadata
# https://www.python.org/dev/peps/pep-0621
name = "feeph.i2c"
version = "0.7.2"
description = "abstraction layer for the I²C bus (incl. simulation for testing)"
authors = [
    {name = "Feeph Aifeimei", email = "55798703+feeph@users.noreply.github.com"},
]
dependencies = [
    "adafruit-blinka~=8.46",
    "gpiod~=2.2",
    "RPI-GPIO~=0.7",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = ["i2c", "smbus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]

[project.urls]
#documentation =
#homepage = "https://github.com/feeph/libi2c-python"
repository = "https://github.com/feeph/libi2c-python"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
#backend-path = ["src"]

# -------------------------------------------------------------------------
# tooling
# -------------------------------------------------------------------------

# https://github.com/PyCQA/isort
# https://pycqa.github.io/isort/
[tool.isort]
# use the black profile but override "multi_line_output"
profile           = "black"
line_length       = 250
multi_line_output = 7
src_paths         = ["feeph", "tests"]

# https://pypi.org/project/autopep8/
[tool.autopep8]
max_line_length = 250
ignore          = ["E221", "E241"]
in-place = true

[tool.pdm]
distribution = true

# automatically update requirements.txt on `pdm lock`
[[tool.pdm.autoexport]]
filename = "requirements.txt"
groups = ["default", "test"]

[tool.pdm.build]
includes = ["feeph/"]
source-includes = ["tests/"]

[tool.pdm.dev-dependencies]
test = [
    "autopep8     ~= 2.2",
    "flake8       ~= 7.0",
    "mypy         ~= 1.10",
    "pytest-cov   ~= 5.0",
    "pytest-sugar ~= 1.0",
]
tox = []
dev = []
docs = []
tests = []

# use <CONFIG_ROOT>/config.toml (typically ~/.config/pdm/config.toml)
# to provide repository credentials when publishing from local machine
# (see https://pdm-project.org/en/latest/usage/config/ for details)
